3/12/2008:	v4.1.19
	- now really update speech samples

2/12/2008:	v4.1.18
	- enabled penguin theme for openSUSE

1/12/2008:	v4.1.17
	- new texts for speech support (bnc #391313)

20/11/2008:	v4.1.16
	- translations, again (bnc #445350)

20/11/2008:	v4.1.15
	- updated translations (bnc #445350)

20/11/2008:	v4.1.14
	- updated translations
	- removed special livecd menu text replacements

12/11/2008:	v4.1.13
	- no beep in installed system (fate #303481)

7/11/2008:	v4.1.12
	- fixed 'portuguese' spelling (bnc #442407)

5/11/2008:	v4.1.11
	- all menus have speech support now
	- speech works with languages != english
	- in input lines the char at cursor position is spoken

4/11/2008:	v4.1.10
	- fix last livecd patch
	- can replace '_' with space in menu entries

4/11/2008:	v4.1.9
	- for livecds: don't switch to text mode with F9 (bnc #391313)

16/10/2008:	v4.1.8
	- new openSUSE theme

6/10/2008:	v4.1.7
	- updated SLES/SLED themes

29/9/2008:	v4.1.6
	- updated SLE themes

26/9/2008:	v4.1.5
	- translations updated

25/9/2008:	v4.1.4
	- added keyboard selection dialog (bnc #422175)

25/9/2008:	v4.1.3
	- better monitor detection (bnc #407786)
	- fix default video size selection (bnc #407786)

11/9/2008:	v4.1.2
	- support serial lines (fate #301595)

19/8/2008:	v4.1.1
	- activated SLE themes

18/8/2008:	v4.1.0
	- cooperate with mboot module
	- enhanced gfxboot script
	- fixed bug in gfxboot-font ('--add' option cleared char list)
	- support new text formatting tags (<p> & <ul>)
	- new help texts
	- fix help to better tolerate broken help setup
	- bootloader always beeps

26/5/2008:	v4.0.14
	- updated translations

26/5/2008:	v4.0.13
	- make driver update menu configurable
	- added 'download url' item to driver update menu

26/5/2008:	v4.0.12
	- worked on 11.0 theme

19/5/2008:	v4.0.11
	- turn sound off before loading kernel (bnc #392016)
	- partly moved to new theme
	- use 32 bit graphics mode for bootloader

15/5/2008:	v4.0.10
	- rewrote config file parser