@@ -1,3 +1,7 @@
+3/12/2008:	v4.1.20
+	- implemented realloc function
+	- file read works with files of unknown size (-1)
+
 3/12/2008:	v4.1.19
 	- now really update speech samples
 
